Fixed cropped images

--- a/src/stylesheets/sumo/sumo.styl
+++ b/src/stylesheets/sumo/sumo.styl
@@ -62,7 +62,8 @@ section.sumo:nth-of-type(2)
 			left: 0
 			width: 100%
 			height: 100% 
-
+			/*display: block
+			margin: 50px auto*/
 		
 	.contentList
 		margin: 15px auto
